--- a/SRE/Python/Python面向函数/装饰器函数.md
+++ b/SRE/Python/Python面向函数/装饰器函数.md
@@ -1,9 +1,8 @@
-# Python装饰器
+# Python 装饰器
 
-在 Python 中，**装饰器**是一个非常强大的功能，它允许你在不修改函数代码的情况下，动态地修改函数或方法的行为。装饰器本质上是一个函数，它接受一个函数作为参数并返回一个新的函数。
+在 Python 中，装饰器是一个非常强大的功能，可以在不修改函数代码的情况下，动态地修改函数/方法的行为。装饰器本质上是一个函数，它接受一个函数作为参数并返回一个新的函数。
 
-简单来讲：让其他函数在不需要做任何代码变动的前提下，增加额外的功能，装饰器的返回值也是一个函数对象。
-装饰器的应用场景：比如插入日志，性能测试，事务处理，缓存等等场景。
+应用场景：比如插入日志，性能测试，事务处理，缓存等等场景。
 
 ## 案例切入
 
@@ -17,11 +16,7 @@ def func1():
 # hello world
 # in func1
 # hello python
-```
 
-可以想想应该怎么做？让我们一起研究一下：
-
-```python
 # 实现
 def func2(func):
     def inner():
@@ -71,8 +66,10 @@ def timer(func):
     return inner
 
 @timer
-# 当我们在某个函数上方使用@my_decorator的时候，python会自动将下面定义的函数做为参数传递给my_decorator。
-# 等价于func1 = timer(func1)
+"""
+当我们在某个函数上方使用 @my_decorator 的时候，python 会自动将下面定义的函数做为参数传递给 my_decorator。
+func1 = timer(func1)
+"""
 def func1():
     time.sleep(1)
     print('in func1')
@@ -97,6 +94,9 @@ def timer(func):
     return inner
 
 @timer
+"""
+func1 = timer(func1)
+"""
 def func1(a):
     time.sleep(1)
     print(a)
@@ -113,10 +113,8 @@ def my_decorator(func):
     def wrapper(*args, **kwargs):
         # 打印传入的参数
         print(f"调用 {func.__name__} 函数，参数: {args}, 关键字参数: {kwargs}")
-        
         # 调用原始函数并获取结果
         result = func(*args, **kwargs)
-        
         # 打印返回结果
         print(f"{func.__name__} 函数返回: {result}")
         
@@ -154,11 +152,11 @@ func1 = timer(func1)  # 将函数本身做为参数传递进去
 func1()
 ```
 
-思考一个问题：这里虽然我们最后还是执行`func1`函数，但是这里的`func1`函数还是我们最初的`func1`函数吗？
+思考一个问题：这里虽然我们最后还是执行 `func1` 函数，但是这里的 `func1` 函数还是我们最初的`func1`函数吗？
 
 ......
 
-我们先来看一下最后的`func1`他的函数名
+我们先来看一下最后的 `func1` 他的函数名
 
 ```python
 import time
@@ -173,19 +171,15 @@ def timer(func):
         print(time.time() - start)
     return inner
 
-func1 = timer(func1)  		# 将函数本身做为参数传递进去
-
-print(func1.__name__)		# 查看函数的名称
-
-# Output:
-inner
+func1 = timer(func1)    # 将函数本身做为参数传递进去
+print(func1.__name__)   # 查看函数的名称
 ```
 
 ## 导入wraps装饰器
 
 `wraps` 装饰器，用于帮助创建装饰器时保留被装饰函数的元数据（如名称、文档字符串等）。使用 `@wraps` 可以确保装饰后的函数看起来像原始函数，这样有助于调试和文档生成。
 
-我们将上方的案例使用wraps装饰器装饰
+我们将上方的案例使用 wraps 装饰器装饰
 
 ```python
 from functools import wraps
@@ -202,9 +196,8 @@ def timer(func):
         print(time.time() - start)
     return inner
 
-func1 = timer(func1)  		# 将函数本身做为参数传递进去
-
-print(func1.__name__)		# 查看函数的名称
+func1 = timer(func1)    # 将函数本身做为参数传递进去
+print(func1.__name__)   # 查看函数的名称
 ```
 
 # 带参数的装饰器
@@ -225,19 +218,18 @@ def timing_decorator(print_time=True):
             start_time = time.time()  # 记录开始时间
             result = func(*args, **kwargs)  # 调用原始函数
             end_time = time.time()  # 记录结束时间
-
             if print_time:
                 execution_time = end_time - start_time
                 print(f"{func.__name__} 执行时间: {execution_time:.4f}秒")
-
             return result
-
         return wrapper
-
     return decorator
 
 
 @timing_decorator(print_time=True)
+"""
+add = timing_decorator(print_time=True)(add)
+"""
 def add(x, y):
     """返回两个数的和"""
     time.sleep(1)  # 模拟耗时操作
@@ -258,10 +250,6 @@ print(f"加法结果: {result_add}")
 result_multiply = multiply(5, 3)
 print(f"乘法结果: {result_multiply}")
 
-# Output:
-add 执行时间: 1.0128秒
-加法结果: 8
-乘法结果: 15
 ```
 
 # 多个装饰器装饰一个函数
@@ -289,20 +277,15 @@ def f():
     print('Hello')
 
 f()
-# f = wrapper2(f) -> func = f, return inner2
-# f = wrapper1(f) -> func = inner2, return inner1
-# f() -> inner1() -> inner2() -> f() -> inner2() -> inner1()
+
+"""
+执行过程分析：
+1. f = wrapper2(f) -> func = f, return inner2
+2. f = wrapper1(f) -> func = inner2, return inner1
+3. f() = inner1() -> inner2() -> f() -> inner2() -> inner1()
+"""
 
 ```
-
-`@wrapper2` 首先应用于 `f`，然后 `@wrapper1` 应用于 `wrapper2` 返回的结果。
-
-当你调用 `f()` 时，实际执行的过程如下：
-
-- `f` 首先被 `wrapper2` 装饰，返回一个新的函数 `inner`，这个 `inner` 函数会在调用时执行 `f`。
-- 然后，`wrapper1` 装饰了 `wrapper2` 返回的 `inner` 函数，返回了另一个 `inner` 函数。
-
-最终，`f` 实际上是一个被 `wrapper1` 和 `wrapper2` 装饰过的函数。
 
 ## 示例：多个装饰器
 
@@ -343,46 +326,24 @@ def add(x, y):
 result = add(5, 3)
 print(f"加法结果: {result}")
 
-# Output:
-调用 add 函数，参数: (5, 3), 关键字参数: {}
-add 执行时间: 1.0001秒
-加法结果: 8
 ```
-
-# 开放封闭原则
-
-开放封闭原则（Open/Closed Principle, OCP）是面向对象设计中的一个重要原则，它是 SOLID 原则之一。这个原则的核心思想是：
-
-## 定义
-
-- **开放性**：软件实体（如类、模块、函数等）应该对扩展开放。这意味着你应该能够通过增加新功能来扩展这些实体，而不是修改现有的代码。
-- **封闭性**：软件实体应该对修改封闭。也就是说，应该避免直接修改已存在的代码，以防止引入错误或破坏现有功能。
-
-## 目的
-
-开放封闭原则的主要目的是提高代码的可维护性和可扩展性。遵循这一原则可以减少对现有代码的影响，从而降低引入新错误的风险。
 
 # 装饰器的固定结构
 
 ```python
-def outer(func):
-    def inner(*args,**kwargs):
-        '''执行函数之前要做的'''
-        re = func(*args,**kwargs)
-        '''执行函数之后要做的'''
-        return re
-    return inner
-
-
-# 下面是加上wraps的固定结构
 from functools import wraps
 
-def outer(func):
-    @wraps(func)
-    def inner(*args,**kwargs)
-    	'''执行函数之前要做的'''
-        re = func(*args,**kwargs)
-        '''执行函数之后要做的'''
-        return re
-    return inner
+def decorator_with_args(param):
+    def actual_decorator(func):
+        @wraps(func)
+        def wrapper(*args, **kwargs):
+            print(f"装饰器参数: {param}")
+            return func(*args, **kwargs)
+        return wrapper
+    return actual_decorator
+
+@decorator_with_args("配置参数")
+def my_function():
+    pass
+
 ```
