--- a/SRE/Python/Python面向函数/认识函数.md
+++ b/SRE/Python/Python面向函数/认识函数.md
@@ -132,7 +132,7 @@ greet03(address="nj", site="ncloud.eagleslab.com", name="EagelsLab")
 
 动态参数是指在函数定义时允许接受可变数量的参数。这种特性使得函数可以处理不同数量的输入，而不需要在定义时明确列出所有参数。Python 提供了两种主要方式来实现动态参数：`*args` 和 `**kwargs`。
 
-`*args` 允许函数接受任意数量的位置参数。这些参数会被收集到一个元组中。
+`*args` 允许函数接受任意数量的位置参数，这些参数会被收集到一个元组中。
 
 ```python
 def sum_numbers(*args):
@@ -228,13 +228,13 @@ add_book("西游记", "吴承恩", year=1592, publisher="明代世德堂刻本",
 
 命名空间是一个容器，用于存储变量名（或标识符）与对象（值）之间的映射关系。命名空间确保了变量名的唯一性，不同的命名空间可以包含同名的变量而不会产生冲突。
 
-#### 类型
+### 类型
 
 - **内置命名空间**：包含 Python 内置的函数和对象，如 `len()`、`print()` 等。
 - **全局命名空间**：模块级别的命名空间，包含模块中定义的变量和函数。
 - **局部命名空间**：函数内部的命名空间，包含函数内部定义的变量。
 
-#### 示例
+### 示例
 
 ```python
 def my_function():
@@ -250,14 +250,14 @@ print("全局 x:", x)
 
 作用域定义了变量的可访问性或可见性。它决定了在程序的某一部分可以访问哪些变量。
 
-#### 类型
+### 类型
 
 - **局部作用域**：函数内部定义的变量，仅在函数内部可见。
 - **全局作用域**：模块级别定义的变量，在整个模块内可见。
 - **内置作用域**： Python 内置的名字，始终可用。
 
 
-#### 示例
+### 示例
 
 ```python
 def outer_function():
@@ -301,7 +301,7 @@ func()
 
 区别在于`globals()`不管再什么地方，都是访问全局命名空间的变量，而`locals()`是访问当前(所在命名空间)的变量
 
-## global 关键字
+## global 和 nolocal 关键字
 
 `global` 关键字用于在函数内部声明一个变量是全局变量，从而允许你在函数内部对其进行修改。
 
@@ -342,7 +342,6 @@ print(dic)
 print(li)
 ```
 
-## nolocal 关键字
 
 `nonlocal` 关键字用于在嵌套函数中声明一个变量是外层函数的局部变量。它允许内层函数修改外层函数的变量。
 
@@ -451,7 +450,6 @@ def greet():
 greeting = greet
 print(greeting())  
 
-# Output: Hello, World!
 ```
 
 - 可以被当作容器类型的元素
@@ -487,9 +485,6 @@ def func(argv):
 f = func(f1)
 f()
 
-# Output:
-in f1
-in f1
 ```
 
 # 闭包
