--- a/SRE/Python/Python面向函数/迭代器与生成器.md
+++ b/SRE/Python/Python面向函数/迭代器与生成器.md
@@ -1,10 +1,8 @@
 # 可迭代对象
 
-## 什么叫做迭代
+## 迭代
 
-通过之前的学习，我们已经知道对于 **list、tuple、str** 等类型的数据，我们可以使用 `for i in xxx` 的语法进行循环取值，我们把这样的过程称之为**遍历**，也叫做**迭代**
-
-如下：
+使用 `for i in xxx` 对字符串、列表、元组、字典、集合进行循环取值的过程称为遍历，也叫做迭代。
 
 ```python
 li = [1, 2, 3, 'a', 'b', 'c']
@@ -18,15 +16,23 @@ for j in str:
 dic = {'name': 'nls', 'age': 18, 'job': 'teacher'}
 for k,v in dic.items():
     print(k,v)
-# ......
+
 ```
 
-## 如何判断一个对象是否可迭代
+## 定义
 
-我们可以用 Python 中内置的 `isinstance()` 方法来判断某个对象是 **Iterable 对象**，也可以称之为**可迭代对象**
+可迭代对象是能够通过迭代逐一返回其元素的对象。它必须满足以下条件之一：
+- 实现 `__iter__()` 方法，返回一个可迭代对象
+- 实现 `__getitem__()` 方法，支持从索引0开始的顺序访问
+
+## 常见可迭代对象类型
+
+
+
+
+## 判断是否为可迭代对象
 
 ```python
-# 字符串、列表、元组、字典、集合都可以被for循环，说明他们都是可迭代的
 from collections.abc import Iterable
 
 l = [1, 2, 3, 4]
@@ -41,23 +47,15 @@ print(isinstance(d, Iterable))
 print(isinstance(s, Iterable))
 print(isinstance(a, Iterable))
 
-# Output:
-True
-True
-True
-True
-False
 ```
 
 # 迭代器
 
-Python 中，**迭代器**是一种用于遍历集合（如列表、元组、字典等）中元素的对象。
+迭代器是一种用于遍历可迭代对象的对象。它可以记录遍历的位置，
 
-可迭代对象通过 `__iter__` 方法向我们提供一个迭代器，我们在迭代一个可迭代对象的时候，实际上就是先获取该对象提供的一个迭代器，然后通过这个迭代器来依次获取对象中的每一个数据。
+可迭代对象可以通过 `__iter__` 方法返回一个迭代器，我们在迭代一个可迭代对象的时候，实际上就是先获取该对象提供的一个迭代器，然后通过这个迭代器来依次获取对象中的每一个数据。
 
 上面讲到迭代是访问集合元素的一种方式。而迭代器是一个可以记住遍历的位置的对象。迭代器对象从集合的第一个元素开始访问，直到所有的元素被访问完结束，迭代器只能往前不会后退。
-
-**那么也就是说，一个具备了 `__iter__` 方法的对象，就是一个可迭代对象。**
 
 ```python
 l = [1, 2, 3, 4]
@@ -88,8 +86,8 @@ print(dir(s))
 ```python
 list1 = [1,2,3,'a','b','c']
 
-list_iter = list1.__iter__()    # list是可迭代对象，这里我们调用iter方法初始化一个迭代器list_iter
-item = list_iter.__next__()     # 这里通过next方法来获取下一个数据
+list_iter = list1.__iter__()    # list 是可迭代对象，这里我们调用 iter 方法初始化一个迭代器l ist_iter
+item = list_iter.__next__()     # 这里通过 next 方法来获取下一个数据
 print(item)
 item = list_iter.__next__()
 print(item)
@@ -111,7 +109,7 @@ list1 = [1,2,3,'a','b','c']
 list_iter = list1.__iter__()
 while True:
     try:
-        print(next(list_iter))		# 这里是next方法的另一种写法
+        print(next(list_iter))		# 这里是 next 方法的另一种写法
     except StopIteration:
         print('迭代完成')
         break
@@ -131,25 +129,21 @@ print(isinstance(list1, Iterator))
 print(isinstance(list_iter, Iterator))
 print(isinstance(iter(list1), Iterator))	# 初始化迭代器的另一种方法
 
-# Output:
-False
-True
-True
 ```
 
-## for循环的本质
+## for 循环的本质
 
-我们常用的for循环其实本质上就是迭代器协议的一种具体实现，为我们提供了一个遍历的迭代元素的方法。
+我们常用的 for 循环其实本质上就是迭代器协议的一种具体实现，为我们提供了一个遍历的迭代元素的方法。
 
 **工作原理：**
 
 当你使用 `for` 循环遍历一个可迭代对象时，实际上发生了以下几个步骤：
 
-1. **调用 `__iter__()`**：
+1. 调用 `__iter__()`：
    - `for` 循环首先调用对象的 `__iter__()` 方法，获取一个迭代器对象。
-2. **调用 `__next__()`**：
+2. 调用 `__next__()`：
    - 然后，`for` 循环在迭代器上反复调用 `__next__()` 方法，以获取下一个元素。
-3. **处理 `StopIteration`**：
+3. 处理 `StopIteration`：
    - 一旦 `__next__()` 抛出 `StopIteration` 异常，`for` 循环停止迭代。
 
 # 生成器
@@ -158,17 +152,15 @@ True
 
 ## 生成器的原理
 
-**状态保持**：生成器通过 `yield` 语句保存函数的状态。在每次调用生成器时，函数会从上一个 `yield` 语句的下一行继续执行，而不仅仅是从函数的开始处执行。
+状态保持：生成器通过 `yield` 语句保存函数的状态。在每次调用生成器时，函数会从上一个 `yield` 语句的下一行继续执行，而不仅仅是从函数的开始处执行。
 
-**迭代器接口**：生成器实现了迭代器协议，因此可以使用 `for` 循环进行遍历。
+迭代器接口：生成器实现了迭代器协议，因此可以使用 `for` 循环进行遍历。
 
 ## 生成器函数
 
-生成器也是一个函数，但与普通函数不同的是，它使用 `yield` 语句来返回值。每次调用生成器函数时，它会从上次 `yield` 的地方继续执行，直到遇到下一个 `yield` 或函数结束。
+生成器也是一个函数，但与普通函数不同的是，它使用 `yield` 关键字来返回值。每次调用生成器函数时，它会从上次 `yield` 的地方继续执行，直到遇到下一个 `yield` 或函数结束。
 
-所以说，如果一个函数中使用yield来返回值，那么可以认为这是一个生成器函数
-
-并且调用生成器函数不会得到返回的具体的值，而是得到一个迭代器。每一次获取这个迭代器值，就能推动函数的执行，获取新的返回值。直到函数执行结束。
+调用生成器函数不会得到返回的具体的值，而是得到一个迭代器。每一次获取这个迭代器值，就能推动函数的执行，获取新的返回值。直到函数执行结束。
 
 ```python
 def numbers(n):
@@ -186,9 +178,9 @@ for i in numbers(10):
 
 ### 案例：重生之我在早餐的卖包子
 
-我重生了，重生在了高考的前一天，由于上一世我参加了高考最后只能上个大专，毕业了一事无成。这一生，我要成为商业巨头......
+我重生了，重生在了高考的前一天，由于上一世我参加了高考最后只能上个大专，毕业了一事无成。这一生，我要成为商业巨头……
 
-一抬头，有一个卖包子的店铺正在转让，我决定从这里开始我的梦幻人生...
+一抬头，有一个卖包子的店铺正在转让，我决定从这里开始我的梦幻人生……
 
 言归正传，如果卖包子，那么我一下子生成100笼包子，没地方放的同时还容易坏。我们可不可以等到有顾客下单的时候再去生成？
 
@@ -223,7 +215,7 @@ for i in range(5):
 - send 获取下一个值的效果和next基本一致
 - 在获取下一个值的时候，给上一个 yield 的位置传递一个数据
 - 使用 send 的注意事项
-  - 第一次使用生成器的时候 是用next获取下一个值
+  - 第一次使用生成器的时候 是用 nex t获取下一个值
   - 最后一个 yield 不能接受外部的值
 
 ```python
@@ -240,10 +232,4 @@ print('***',ret)
 ret = g.send('英格科技')
 print('***',ret)
 
-# Output:
-123
-*** 1
-欢迎来到 英格科技
-456
-*** 2
 ```
